# star-wars-dataforce

./: .gitignore  README.md  databank_debug.html  databank_series_debug.html  main.py  pyproject.toml
config/: settings.py
config/logging/: logger.py
docs/: ARCHITECTURE.md
output/: characters.json
scripts/: debug_databank.py  debug_databank_series.py  extract_mandalorian.py  extract_mandalorian_characters.py  test_databank_character.py  test_slugs.py
src/application/mappers/: swapi_mapper.py
src/application/use_cases/: build_character_pipeline.py  enrich_descriptions_pipeline.py  extract_characters.py  extract_databank_series.py  extract_swapi_pipeline.py  scrape_descriptions.py
src/core/entities/: character.py
src/core/ports/: character_repository.py
src/infrastructure/core/ports/: scraper_port.py
src/infrastructure/http/: swapi_client.py
src/infrastructure/persistence/: json_storage.py  json_writer.py
src/infrastructure/scraping/: __init__.py  base_playwright_scraper.py  composite_scraper.py  starwars_databank_scraper.py  wookieepedia_scraper.py
src/shared/config/: settings.py
src/shared/logging/: logger.py
src/transformation/cleaners/: character_cleaner.py
src/transformation/mergers/: character_merger.py
tests/unit/: test_system_fixes.py
tests/unit/core/: test_character_entity.py
tests/unit/mappers/: test_swapi_mapper.py
tests/unit/transformation/: test_character_cleaner.py
